Fixed carbon add z-index

--- a/assets/css/_carbon.scss
+++ b/assets/css/_carbon.scss
@@ -10,6 +10,7 @@
   overflow: hidden;
   padding: 2rem 0;
   position: fixed;
+  z-index: 2;
 
   a {
     border-bottom: 0;
